Add Group entity, add links between Group and User
